tests/snapshots/snapshots_from_examples__with_everything_spec.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "Go to the store for chicken",
    description: Some("Make sure you get the stuff from the butcher directly"),
    priority: Some(1),
    contexts: Some([
      "Driving",
      "Store",
      "Market",
    ]),
    doDateTime: Some("2025-01-19T08:30:00-08:00"),
    doDuration: Some(30),
    completedDate: Some("2025-01-19T10:30:00-08:00"),
    story: Some("Run Errands"),
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Child action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Great grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Double-great grandchild action",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Leaf action",
  ),
]
