tests/snapshots/snapshots_from_examples__with_links.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Review pull request [[PR #456|https://github.com/org/repo/pull/456]]",
    description: Some("Check the implementation against [[API docs|https://api.example.com/v2/docs]] and verify [[https://example.com/checklist]]"),
    createdDate: "[timestamp]",
  ),
]
