tests/snapshots/snapshots_from_examples__with_new_features.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Clearhead Platform Release v2.0",
    description: Some("Comprehensive release combining all new features"),
    priority: Some(1),
    contexts: Some([
      "DevOps",
      "Release",
    ]),
    scheduled_at: Some("2026-02-01T09:00:00-08:00"),
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead"),
    alias: Some("release-v2"),
    is_sequential: Some(true),
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Update parser with new syntax",
    description: None,
    priority: Some(1),
    contexts: Some([
      "Coding",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/parser"),
    alias: Some("parser-update"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Update CLI entities",
    description: None,
    priority: Some(1),
    contexts: Some([
      "Coding",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/cli"),
    alias: Some("cli-update"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Update linting rules",
    description: None,
    priority: Some(2),
    contexts: Some([
      "Coding",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/cli"),
    alias: Some("lint-update"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Write documentation",
    description: None,
    priority: Some(2),
    contexts: Some([
      "Writing",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: Some("work/clearhead/docs"),
    alias: Some("docs-update"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Integration testing",
    description: Some("Test all new features work together"),
    priority: Some(1),
    contexts: Some([
      "Testing",
      "QA",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("work/clearhead/testing"),
    alias: Some("integration-tests"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Review by stakeholders",
    description: Some("Get approval before release"),
    priority: Some(2),
    contexts: Some([
      "Review",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("work/clearhead"),
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Deploy to production",
    description: Some("Final deployment"),
    priority: Some(1),
    contexts: Some([
      "DevOps",
      "Critical",
    ]),
    scheduled_at: None,
    duration: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: Some([
      PredecessorRef(
        raw_ref: "[predecessor_ref]",
      ),
    ]),
    charter: Some("work/clearhead/infrastructure"),
    alias: Some("deploy-prod"),
    is_sequential: None,
    plan_id: None,
    external_schedule_id: None,
    external_occurrence_key: None,
    scheduled_at_sync: None,
    due_date_sync: None,
  ),
]
