tests/snapshots/snapshots_from_examples__with_priority.snap
---
source: tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: completed,
    name: "buy groceries",
    priority: Some(1),
    createdDate: Some("2026-01-04T22:27:53.771958058-08:00"),
  ),
]
