tests/snapshots/snapshots_from_examples__with_sequential.snap
---
source: tests/snapshots_from_examples.rs
assertion_line: 19
expression: actions
---
[
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Build release package",
    description: Some("All children must be completed in order"),
    priority: Some(1),
    contexts: Some([
      "DevOps",
    ]),
    createdDate: "[timestamp]",
    story: Some("Release"),
    isSequential: Some(true),
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Run linter",
    description: Some("Check code style and formatting"),
    priority: Some(2),
    contexts: Some([
      "Tooling",
    ]),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Run unit tests",
    description: Some("Verify all unit tests pass"),
    priority: Some(2),
    contexts: Some([
      "Testing",
    ]),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Run integration tests",
    description: Some("Verify integration tests pass"),
    priority: Some(2),
    contexts: Some([
      "Testing",
    ]),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Build binary",
    description: Some("Compile release build"),
    priority: Some(2),
    contexts: Some([
      "Build",
    ]),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Create archive",
    description: Some("Package for distribution"),
    priority: Some(3),
    contexts: Some([
      "Build",
    ]),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Morning routine",
    description: Some("Daily sequential checklist"),
    contexts: Some([
      "Home",
    ]),
    createdDate: "[timestamp]",
    story: Some("Personal"),
    isSequential: Some(true),
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Wake up",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Shower",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Get dressed",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Breakfast",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Check calendar",
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    state: not_started,
    name: "Deploy to production",
    description: Some("Deployment steps must happen in order"),
    priority: Some(1),
    contexts: Some([
      "Work",
      "DevOps",
    ]),
    createdDate: "[timestamp]",
    story: Some("Infrastructure"),
    isSequential: Some(true),
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Take backup",
    description: Some("Backup current state before changes"),
    priority: Some(1),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Stop services",
    priority: Some(2),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Run migrations",
    description: Some("Apply database changes"),
    priority: Some(1),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Deploy new code",
    priority: Some(1),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Start services",
    priority: Some(2),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Verify health checks",
    priority: Some(1),
    createdDate: "[timestamp]",
  ),
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: not_started,
    name: "Notify stakeholders",
    priority: Some(3),
    createdDate: "[timestamp]",
  ),
]
